# QuickCheck-Example

./: CHANGELOG.md  qc.cabal
src/: TheLib.hs
tests/: Tests.hs
